@@ -30,7 +30,7 @@ request passed to the view would have a ``one`` key with the value
 ``foo`` and a ``two`` key with the value ``bar``.
 
 The source code for this tutorial stage can be browsed at
-`docs.repoze.org <http://docs.repoze.org/bfgwiki2-1.2/views>`_.
+`docs.repoze.org <http://docs.repoze.org/bfgwiki2-1.3/views>`_.
 
 Declaring Dependencies in Our ``setup.py`` File
 ===============================================
