@@ -32,7 +32,8 @@ class Page(Base):
        self.data = data
 
 class RootFactory(object):
-    __acl__ = [ (Allow, Everyone, 'view'), (Allow, 'editor', 'edit') ]
+    __acl__ = [ (Allow, Everyone, 'view'),
+                (Allow, 'group:editors', 'edit') ]
     def __init__(self, request):
         self.__dict__.update(request.matchdict)
 
