@@ -1,6 +1,6 @@
 USERS = {'editor':'editor',
           'viewer':'viewer'}
-GROUPS = {'editor':['group.editors']}
+GROUPS = {'editor':['group:editors']}
 
 def groupfinder(userid, request):
     if userid in USERS:
